# Rephrasinator

./: CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/rephrasinator/: __init__.py  cli.py  model.py  prompt.py  rephrasinator.py
tests/: __init__.py  test_rephrasinator.py
