[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rephrasinator"
version = "0.1.0"
description = "Rephrase simple sentences ... AI goes BRRRRR"
readme = "README.rst"
authors = [
  {name = "Anton Kesy", email = "antonkesy@gmail.com"}
]
maintainers = [
  {name = "Anton Kesy", email = "antonkesy@gmail.com"}
]
classifiers = []
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
bugs = "https://github.com/antonkesy/rephrasinator/issues"
changelog = "https://github.com/antonkesy/rephrasinator/blob/master/changelog.md"
homepage = "https://github.com/antonkesy/rephrasinator"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]
