[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rephrasinator"
version = "0.1.0"
description = "Rephrase simple sentences ... AI goes BRRRRR"
readme = "README.md"
authors = [ {name = "Anton Kesy", email = "antonkesy@gmail.com"} ]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {text = "MIT license"}
dependencies = [
  "pytest==8.3.3",
  "typer==0.15.1",
  "langchain==0.1.16",
  "langchain-openai==0.1.4",
  "langchain-community==0.0.34"
]

[project.urls]
bugs = "https://github.com/antonkesy/rephrasinator/issues"
homepage = "https://github.com/antonkesy/rephrasinator"

[project.scripts]
rephrasinator = "rephrasinator.cli:app"
